--- a/config/boards/shields/my_corne/my_corne_left.conf
+++ b/config/boards/shields/my_corne/my_corne_left.conf
@@ -1,9 +1,8 @@
 # Uncomment the following lines to enable the Corne RGB Underglow
-CONFIG_ZMK_RGB_UNDERGLOW=y
+#CONFIG_ZMK_RGB_UNDERGLOW=y
 CONFIG_WS2812_STRIP=y
 
 # Uncomment the following line to enable the Corne OLED Display
 CONFIG_ZMK_DISPLAY=y
 CONFIG_SSD1306=y
 
-CONFIG_ZMK_BACKLIGHT=y
