--- a/config/corne.conf
+++ b/config/corne.conf
@@ -33,6 +33,7 @@ CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
 ## RGB Underglow
 
 # Uncomment the following lines to enable the Corne RGB Underglow
+CONFIG_ZMK_RGB_UNDERGLOW_ON_START=n
 CONFIG_ZMK_RGB_UNDERGLOW=y
 CONFIG_WS2812_STRIP=y
 
